# simbricks

./: .clang-tidy  .gitignore  .gitmodules  Makefile  SConstruct  docker-compose.yaml  test.sh
docker/: Dockerfile  Dockerfile.base  Dockerfile.buildenv  Dockerfile.dist-worker  Dockerfile.full  Dockerfile.gem5opt  Dockerfile.min  rules.mk
experiments/pyexps/: gem5_i40e_pair.py  simple_netperf.py  simple_ntp_exp.py  simple_ping.py  timesync.py  trace-dumbbell.py
experiments/simbricks/orchestration/: exectools.py  nodeconfig.py  simulators.py
images/: rules.mk
images/kernel/: config-5.15.93
images/scripts/: guestinit.sh  install-base.sh  install-timesync.sh
lib/simbricks/: rules.mk
lib/simbricks/axi/: axi_s.hpp  axi_subordinate.hh  axil_manager.hh
lib/simbricks/cli/: rules.mk
lib/simbricks/nicbm/: nicbm.cc  nicbm.h
lib/simbricks/trace/: log.h  rules.mk
lib/utils/: log.h  string_util.h  util.hpp
sims/mem/: rules.mk
sims/net/menshen/lib/: blk_mem_gen_0.v  blk_mem_gen_1.v  blk_mem_gen_2.v  blk_mem_gen_3.v  cam_simple.v  cam_top.v  page_tbl_16w_32d.v  parse_act_ram_ip.v  ram_blk.v
sims/nic/i40e_bm/: headers.h  i40e_bm.cc  i40e_bm.h  i40e_lan.cc  i40e_ptp.cc
trace/: CMakeLists.txt  Dockerfile  Dockerfile.trace  README.md  config.h  docker-compose.yaml  dummy.cpp  jaeger-ui.json  make_pipe.py  namedpipe-exhauster.cpp  otel-collector-config.yaml  prometheus.yaml  rules.mk  run-tracing.sh  test.cc  trace  trace-env-config.yaml  trace.cc
trace/analytics/: config.h  eventStreamTracer.h  eventTypeStatistics.h  hostPacker.cc  hostSpanner.cc  nicPacker.cc  nicSpanner.cc  pack.h  packer.h  queue.h  span.h  spanner.h  trace.h  tracer.h
trace/analytics/packs/: callPack.h  dmaPack.h  ethPack.h  genericSinglePack.h  hostIntPack.h  mmioPack.h  msixPack.h  pack.h
trace/corobelt/: belt.cc  belt.h  concurrencpp-test.cpp  coro-test.cc  corobelt-test.cc  corobelt.h  coroutine.h
trace/env/: stringInternalizer.h  symtable.cc  symtable.h  traceEnvironment.cc  traceEnvironment.h
trace/events/: event-filter.h  eventStreamOperators.h  eventStreamParser.h  events.cc  events.h
trace/filter/: componenttable.h  symtable.cc  symtable.h
trace/include/analytics/: context.h  eventTypeStatistics.h  queue.h  span.h  spanner.h  timer.h  trace.h  tracer.h
trace/include/config/: config.h
trace/include/corobelt/: corobelt.h
trace/include/env/: stringInternalizer.h  symtable.h  traceEnvironment.h
trace/include/events/: event-filter.h  eventStreamParser.h  eventType.h  events.h  printer.h
trace/include/exporter/: exporter.h
trace/include/parser/: eventStreamParser.h  parser.h
trace/include/reader/: cReader.h  reader.h
trace/include/sync/: channel.h  corobelt.h  specializations.h
trace/include/util/: concepts.h  exception.h  factory.h  log.h  ttlMap.h  utils.h
trace/linux_dumps/: i40e-image-syms.dump
trace/parser/: gem5.cc  nicbm.cc  parser.cc  parser.h
trace/reader/: reader.cc  reader.h
trace/source/analytics/: hostSpanner.cc  networkSpanner.cpp  nicSpanner.cc  span.cpp  spanner.cpp
trace/source/corobelt/: concurrencpp-test.cpp
trace/source/env/: symtable.cc  traceEnvironment.cc
trace/source/events/: events.cc
trace/source/parser/: event-stream.cpp  gem5.cc  nicbm.cc  ns3.cpp  parser.cc
trace/source/reader/: cReader.cpp  reader.cc
trace/tests/: channel-test.cpp  config-test.cpp  context-queue-test.cpp  event-stream-parser-test.cpp  gem5-parser-test.cpp  ns3-parser-test.cpp  pipeline-test.cpp  reader-test.cpp  span-test.cpp  test-util.h  trace-env-config.yaml
trace/tests/line-reader-test-files/: simple.txt
trace/tests/raw-logs/: gem5-events-test.txt  ns3-raw-log.txt
trace/tests/stream-parser-test-files/: event-stream-parser-test.txt
trace/util/: componenttable.h  exception.h  symtable.cc
